[package]
name = "learn-bevy-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_mod_picking = "0.20.1"

# Enable a small amout of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy) but not for out code:
[profile.dev.package."*"]
opt-level = 3
